[fix] refs 12 openapiのスキーマ修正(character→enemy)
