# docs/openapi.yml
@@ -255,10 +255,10 @@ paths:
                       - $ref: '#/components/schemas/UserId'
                       - $ref: '#/components/schemas/UserProfile'
                       - $ref: '#/components/schemas/UserStatus'
-                  character:
+                  costume:
                     allOf:
+                      - $ref: '#/components/schemas/Images'
                       - $ref: '#/components/schemas/CharacterDialogue'
-                      - $ref: '#/components/schemas/ImageUrl'
               # example:
               #   user_id: "1"
               #   nickname: "ホントくん"
@@ -338,7 +338,7 @@ paths:
                             accuracy:
                               $ref: '#/components/schemas/Accuracy'
                               description: クイズセットの正答率
-                            character:
+                            enemy:
                               $ref: '#/components/schemas/Images'
                               description: クイズセットの指名手配猫
                             quizSetList:
@@ -392,7 +392,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  character:
+                  enemy:
                     $ref: '#/components/schemas/Images'
                     description: クイズセットの指名手配猫
                   quizSet:
@@ -587,7 +587,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  character:
+                  enemy:
                     $ref: '#/components/schemas/Images'
                     description: クイズセットの指名手配猫
                   costume:
@@ -598,7 +598,6 @@ paths:
                     description: クイズの問題一覧
                     items:
                       $ref: '#/components/schemas/Quiz'
-
 
         '400':
           description: リクエストエラー
@@ -674,6 +673,9 @@ paths:
                       allOf:
                         - $ref: '#/components/schemas/Quiz'
                         - $ref: '#/components/schemas/QuizAnswer'
+                  enemy:
+                    $ref: '#/components/schemas/Images'
+                    description: クイズの敵キャラクター
                   costume:
                     $ref: '#/components/schemas/Images'
                     description: ユーザの着せ替え画像
