# src/server.ts
@@ -15,6 +15,7 @@ import { convertQuizToAPI } from './core/converter/api/quiz';
 import { quiz } from './database/cms/types/response';
 import * as CostumeUsecase from './usecase/costume';
 import * as EnemyUsecase from './usecase/enemy';
+import { paths } from './openapi/schema';
 
 export const app = new Hono();
 export const db = drizzle({ connection: DATABASE_URL, casing: 'snake_case' });
@@ -47,16 +48,17 @@ app.get('/quiz/:tier', async (c: Context) => {
   // 着せ替え取得
   const costume = await CostumeUsecase.getCostume(db, userId);
   // 指名手配猫画像取得
-  const character = await EnemyUsecase.getQuizEnemy(db, tier);
+  const enemy = await EnemyUsecase.getQuizEnemy(db, tier);
 
   // クイズ取得
   const quizzes: Quiz[] = await QuizUsecase.getQuizzes(db, userId, tier);
   const quizList = quizzes.map((quiz) => convertQuizToAPI(quiz));
-  return c.json({
-    character: {
-      id: character.id,
-      name: character.name,
-      url: character.image.url,
+
+  const response: paths['/quiz/{tier}']['get']['responses']['200']['content']['application/json'] = {
+    enemy: {
+      id: enemy.id,
+      name: enemy.name,
+      url: enemy.image.url,
     },
     costume: {
       id: costume.id,
@@ -64,7 +66,9 @@ app.get('/quiz/:tier', async (c: Context) => {
       url: costume.image.url,
     },
     quizList,
-  }, 200);
+  }
+
+  return c.json(response, 200);
 });
 
 app.post('/webhook/quiz', async (c: Context) => {
